--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>I'm working</h2>
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>I'm working</h2>
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>I'm working</h2>
-    </div>
-  </div>
-</div><div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>I'm working</h2>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
